# proxmox

./: Cargo.toml  README.md  build.rs
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: release.yml
docs/: setup.md  tokens.md
examples/: access_bootstrap.rs  live_smoke.rs  pve_to_openapi.rs
scripts/: install-hooks.sh
spec-tools/: from_pve.rs
specs/: proxmox.openapi.json
src/: abi_export.rs  access.rs  cluster.rs  cluster_roster_impl.rs  containers_adapter.rs  diagnostics.rs  lib.rs  main.rs  registration.rs  responses.rs  tools.rs  topology.rs  unit_provider.rs
tests/: live_read_sweep.rs  surface_schema.rs
