[package]
name = "proxmox"
version = "0.1.0"
edition = "2024"
description = "Proxmox VE plugin for orca — cluster nodes/guests with cluster_roster + topology ABI backends"
build = "build.rs"

[package.metadata.orca]
category = "infra"

[lib]
name = "proxmox"
path = "src/lib.rs"
# `rlib` retains the in-crate `#[cfg(test)]` harness + lets the workspace use it
# as a normal Rust lib. The plugin artifact is now the `[[bin]]` below — a
# dynamic subprocess orca's loader spawns, not a dlopened cdylib.
crate-type = ["rlib"]

# Out-of-process entrypoint: orca spawns this binary as a subprocess and speaks
# the plugin wire protocol over a Unix socket. The toolkit's `serve_tool_plugin!`
# in `src/main.rs` emits `fn main`; this is the sole plugin artifact now that the
# in-process cdylib export has been retired.
[[bin]]
name = "proxmox"
path = "src/main.rs"

# Proxmox VE plugin. Typed client codegenned by progenitor from the vendored
# upstream spec (`specs/proxmox.openapi.json`, derived from a cluster node's
# `apidoc.js`). `build.rs` runs `plugin_toolkit_build::openapi::generate_all`
# over the whole spec. Refresh by overwriting `specs/apidoc.js` +
# `specs/proxmox.openapi.json`.
#
# Beyond its tool surface, this plugin contributes three domain backends over the
# subprocess wire protocol (see `src/registration.rs` + `src/main.rs`): a
# `cluster_roster` provider, a `topology` collector, and a `unit` provider (the
# five-verb vm/lxc surface). orca's loader registers all three into the matching `contract`
# registries, so a loaded proxmox plugin restores fleet cluster grouping +
# parent-host topology + guest lifecycle with no static link into orca.

[dependencies]
# The SOLE orca dependency. All macro-emitted paths (`#[orca_tool]`,
# `endpoint_resource!`, dispatch's `register_op!`) resolve through
# `::plugin_toolkit::*`, and every orca primitive the plugin source touches
# (schemars / clap / anyhow / inventory / db / rusqlite / async-trait /
# dispatch / contract / derive / macro-runtime / runtime / containers /
# api_client / http / urlencoding / futures_util / reqwest / tokio) is
# re-exported by the toolkit + its prelude.
#
# The committed `[patch]` in `.cargo/config.toml` overrides this to the local
# in-tree toolkit for development; the git branch is what an external checkout
# without the orca repo resolves against.
# Thin profile: `delegated-http` retargets the progenitor-generated client onto
# orca's `http.request` capability, so this plugin links NO reqwest/rustls/hyper/
# progenitor-client. `default-features = false` drops the real `http`/`openapi`
# stacks; `tools` (orca_tool anchors) + `db` (thin endpoint_resource CRUD over
# db_op) + `containers` (the domain proxmox registers) + `delegated-http` are all
# it needs. `secrets`/`serve`/`storage` are always-on. See [[plugins-stay-thin]].
plugin-toolkit = { git = "https://github.com/argyle-labs/orca", branch = "main", default-features = false, features = ["tools", "db", "containers", "delegated-http"] }

# Light, genuinely-external deps the plugin's own source + generated client still
# name at the crate root. The toolkit-build codegen (`rewrite_codegen_paths`)
# redirects progenitor's `::serde`/`::serde_json`/`::reqwest`/`::progenitor_client`/
# `::chrono`/`::uuid`/`::regress`/`::bytes` to `::plugin_toolkit::*`, so those are
# NOT direct deps — the delegated shims + always-on chrono/uuid/regress supply
# them. `thiserror` is NOT rewritten (generated code emits bare `::thiserror`), and
# the hand-written source uses `serde`/`serde_json` derives directly, so those three
# stay. None drags a transitive heavyweight.
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"

# This plugin's hand-written source (carried over from the in-tree crate) names
# these crates fully-qualified — `schemars::JsonSchema` derives, `anyhow::Result`
# signatures, `tracing::warn!`, `tokio::` — rather than routing every reference
# through the toolkit prelude. They are pinned to the orca workspace major so
# cargo unifies each with the toolkit's same-version copy into a single crate
# instance (the `schemars::Schema` in `ToolDef` stays one type across the seam).
schemars    = { version = "1", features = ["derive"] }
anyhow      = "1"
tracing     = "0.1"
# Subprocess entrypoint only: format the plugin's own tracing to stderr, which
# orca's supervisor inherits. `env-filter` honors `RUST_LOG`.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio       = { version = "1", features = ["full"] }

[dev-dependencies]
tokio    = { version = "1", features = ["macros", "rt-multi-thread"] }
# Spec-refresh tool only (examples/pve_to_openapi.rs + spec-tools/from_pve.rs):
# parse Proxmox's `apidoc.js` dialect into an `openapiv3` document. Proxmox-
# specific, so it lives here, not in orca's generic `openapi` crate. The
# build-time normalize → progenitor pass (build.rs) handles the rest.
openapiv3 = "2"
indexmap  = "2"
anyhow    = "1"

[build-dependencies]
plugin-toolkit-build = { git = "https://github.com/argyle-labs/orca", branch = "main" }

# Prototype spec→orca-surface generator (build/surface.rs). Reads the emitted
# `<flavor>_codegen.rs`, pairs each generated client method back to its spec
# operation via the doc-comment verb+path, applies a declarative ruleset, and
# emits `#[orca_tool]` wrappers plus JsonSchema derives on the surfaced output
# types' transitive closure. Lifts into plugin-toolkit-build once proven.
syn         = { version = "2", features = ["full", "extra-traits", "parsing", "printing"] }
quote       = "1"
proc-macro2 = "1"
prettyplease = "0.2"
regex       = "1"
anyhow      = "1"

# Match orca's workspace lint floor: discarding a Result/Option via
# `let _ = ...` was a load-bearing past incident, so keep it a hard error here
# too — the plugin must stay portable back into the orca workspace.
[lints.clippy]
let_underscore_must_use = "deny"
